--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
   <title>Pinteresting | Gallery Layout</title>
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="/stylesheets/index.css">
 </head>
 <!-- A Simple non functional Pinterest inspired page layout created using only HTML and CSS.
        Created by M. Hassler - Hassified -->
