--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -17,15 +17,12 @@
             <p class="header">Sign Up to get started</p>
 
             <form action="/signup" method="POST">
-                <label for="username"></label>
-                <input type="text" placeholder="Username" class="detail" id="username" /><br />
-                <label for="email"></label>
-                <input type="email" placeholder="Email" class="detail" id="email" /><br />
-                <label for="password"></label>
-                <input type="password" placeholder="Password" class="detail" id="password" />
+                <input type="text" placeholder="Username" class="detail" name="username" /><br />
+                <input type="email" placeholder="Email" class="detail" name="email" /><br />
+                <input type="password" placeholder="Password" class="detail" name="password" />
                 <h4>Forgot your password?</h4>
     
-                <input type="submit" class="btn int">Sign Up</input>
+                <input type="submit" value="Sign Up" class="btn int" />
             </form>
 
             <!-- <p class="or">OR</p>
